--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,11 @@
 
 	<name>Explore With Me</name>
 
+	<modules>
+		<module>ewm-stats</module>
+		<module>ewm-main</module>
+	</modules>
+
 	<groupId>ru.practicum</groupId>
 	<artifactId>explore-with-me</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
