--- a/ewm-main/src/main/resources/application.properties
+++ b/ewm-main/src/main/resources/application.properties
@@ -9,3 +9,9 @@ logging.level.org.springframework.orm.jpa=INFO
 logging.level.org.springframework.transaction=INFO
 logging.level.org.springframework.transaction.interceptor=TRACE
 logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
+
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/ewm-main
+spring.datasource.username=username
+spring.datasource.password=password
+spring.sql.init.schema-locations=classpath:schema.sql
