--- a/ewm-main/src/main/resources/application.properties
+++ b/ewm-main/src/main/resources/application.properties
@@ -16,3 +16,5 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/ewm-main
 spring.datasource.username=username
 spring.datasource.password=password
 spring.sql.init.schema-locations=classpath:schema.sql
+
+stats-server.url=http://localhost:9090
