--- a/ewm-stats/stats-client/pom.xml
+++ b/ewm-stats/stats-client/pom.xml
@@ -41,6 +41,11 @@
             <version>3.0.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
